# singular-decomposition

./: CMakeLists.txt  main.cpp  singular-decomposition.sln  svd.cpp  svd.h
eigenvalues/: Jacobi.cpp  Jacobi.h
math/: math_utils.h  matrix.cpp  matrix.h  solving_equation.h
singular-decomposition/: main.cpp  math_utils.h  matrix.h  singular-decomposition.vcxproj  singular-decomposition.vcxproj.filters
tests/: test.cpp  test.h
